changed products to inquiry on the news page nav bar

--- a/newsPage.html
+++ b/newsPage.html
@@ -28,7 +28,7 @@
                 <a href="./Main//main.html" class="link">Main</a>
                 <a href="./newsPage.html" class="link">News</a>
                 <a href="" class="link">Reviews</a>
-                <a href="./Products/product.html" class="link">Products</a>
+                <a href="./Products/product.html" class="link">Inquiry</a>
                 <a href="" class="link">About</a>
             </nav>
 
