added about, Review, pages and styled then

--- a/Main/main.html
+++ b/Main/main.html
@@ -22,10 +22,10 @@
             
             <div class="link-handler">
                 <a href="./main.html" class="active">Home</a>
-                <a href="#">Reviews</a>
+                <a href="../Review/review.html">Reviews</a>
                 <a href="../newsPage.html">News</a>
                 <a href="../Products/product.html">Inquiry</a>
-                <a href="#">About us</a>
+                <a href="../About/About.html">About us</a>
             </div>
             
         </div>
