--- a/newsPage.html
+++ b/newsPage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Project</title>
+        <title>News</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="./newsPage.css" rel="stylesheet" type="text/css">
@@ -27,9 +27,9 @@
             <nav class="nav">
                 <a href="./Main//main.html" class="link">Main</a>
                 <a href="./newsPage.html" class="link">News</a>
-                <a href="" class="link">Reviews</a>
+                <a href="./Review/review.html" class="link">Reviews</a>
                 <a href="./Products/product.html" class="link">Inquiry</a>
-                <a href="" class="link">About</a>
+                <a href="./About/About.html" class="link">About</a>
             </nav>
 
             <div class="add-news">
@@ -46,9 +46,9 @@
                 <div class="news-card">
                     <div class="news-info">
                         <img src="./dronePic.jpeg" alt="picture of amazon drone" class="news-img">
-                        <h1>Sum stuff</h1>
-                        <h2>Sub heading</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, ad ratione aspernatur in modi asperiores error dolore. Minus assumenda laudantium ullam culpa a expedita et at commodi. Ipsum, iure culpa!</p>
+                        <h1>Amazon’s Drone Delivery Fleet Hits Milestone With FAA Clearance</h1>
+                        <h2>Company Joins Wing and UPS to Receive Certification</h2>
+                        <p>Retail behemoth Amazon­.com Inc. took a big leap toward delivering goods from the sky by becoming one of only a handful of companies certified by the U.S. government to operate as a drone airline.</p>
                         <button onclick="delStory(this)" id="del">Delete</button>
                         
                     </div>
@@ -56,9 +56,9 @@
                 <div class="news-card">
                     <div class="news-info">
                         <img src="./dronePic.jpeg" alt="picture of amazon drone" class="news-img">
-                        <h1>Sum stuff</h1>
-                        <h2>Sub heading</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, ad ratione aspernatur in modi asperiores error dolore. Minus assumenda laudantium ullam culpa a expedita et at commodi. Ipsum, iure culpa!</p>
+                        <h1>Check out Amazon's wild hybrid Prime Air drone that will start delivering soon</h1>
+                        <h2>The Future is now</h2>
+                        <p>While at its Re:MARS conference, the company unveiled a hybrid unmanned aerial vehicle capable of vertical takeoff and landing and sustained forward flight. The drone features thermal cameras, depth cameras, and sonar. It also uses machine learning models and onboard computers. </p>
                         <button onclick="delStory(this)">Delete</button>
                         
                     </div>
